Day1 pages Modified

--- a/day1.html
+++ b/day1.html
@@ -10,16 +10,7 @@
 			<h2 align="center">Registration Form</h2>
 			First Name: <input type="text"/>
 			Last Name: <input type="text"/><br><br>
-			Age: <select>
-					<option>18</option>
-					<option>20</option>
-					<option>22</option>
-					<option>24</option>
-					<option>26</option>
-					<option>28</option>
-					<option>30</option>
-					<option>32</option>
-				</select><br><br>
+			Age: <input type="number" name="age" min="18" max="35"><br><br>
 			Sex: Male <input type="radio">
 				Female <input type="radio"><br><br>
 			Address: <textarea form="frm"></textarea><br><br>
