--- a/day1(table).html
+++ b/day1(table).html
@@ -8,6 +8,8 @@
 	<div>
 		<form id="frm">
 			<h2 align="center">Registration Form</h2>
+			<fieldset>
+				<legend>Personal Info</legend>
 			<table>
 				<tr>
 					<td><b>First Name:</b></td> 
@@ -18,19 +20,8 @@
 					<td><input type="text"/></td>
 				</tr>
 				<tr>
-					<td><b>Age:</b></td> 
-					<td>
-						<select>
-							<option>18</option>
-							<option>20</option>
-							<option>22</option>
-							<option>24</option>
-							<option>26</option>
-							<option>28</option>
-							<option>30</option>
-							<option>32</option>
-						</select>
-					</td>
+					<td><b>Date of Birth:</b></td> 
+					<td><input type="date" max="1997-01-01"></td>
 				</tr>
 				<tr>
 					<td><b>Sex:</b></td> 
@@ -43,8 +34,38 @@
 					<td><b>Address:</b></td> 
 					<td><textarea form="frm"></textarea></td>
 				</tr>
-				<tr><td><input type="submit"></td></tr>
 			</table>
+			</fieldset>
+			<fieldset>
+				<legend>Login Info</legend>
+				<table>
+					<tr>
+						<td><b>E-Mail:</b></td> 
+						<td><input type="email" required></td>
+					</tr>
+					<tr>
+						<td><b>Password:</b></td> 
+						<td><input type="password" required></td>
+					</tr>
+					<tr>
+						<td><i>Subscribe for:</i></td> 
+						<td>
+							<select>
+								<option>Don't Subscribe</option>
+								<option>JavaScript</option>
+								<option>CSS</option>
+								<option>HTML5</option>
+							</select>
+						</td>
+						<td><i>Subscribe to:</i></td> 
+						<td>
+							Weekly Newsletter <input type="checkbox" name="subscribe">
+							Monthly Newsletter <input type="checkbox" name="subscribe">
+						</td>
+					</tr>
+					<tr><td><input type="submit"></td></tr>
+				</table>
+			</fieldset>
 		</form>
 	</div>
 </body>
